change to ini config

--- a/ringowiki.conf
+++ b/ringowiki.conf
@@ -1,6 +1,5 @@
-{
-  secret => 'ringowiki',
-  hypnotoad => {
-    listen => ['http://*:10050']
-  }
-}
+[basic]
+
+[hypnotoad]
+;;; Linsten address and port
+listen=http://*:10050
