add reverse proxy support

--- a/ringowiki.conf
+++ b/ringowiki.conf
@@ -3,3 +3,13 @@
 [hypnotoad]
 ;;; Linsten address and port
 listen=http://*:10050
+
+[reverse_proxy]
+;;; Reverse proxy support (default: automatically detected)
+;on=1
+
+;;; Reverse proxy path depth (default: none)
+;;; If proxy path is http://somehost.com/foo, you set path_depth to 1.
+;;; If proxy path is http://somehost.com/foo/bar, you set path_depth to 2.
+;path_depth=1
+;path_depth=2
